libs/parser/testdata/errors/inline_ref_invalid_alias.csl
# Test: Invalid reference with space in alias
infrastructure:
	bad_ref: @invalid alias:path.to.value
